--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "outDir": "dist",
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "lib": ["es2015.promise", "webworker", "dom"]
   }
 }
